--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ vwsd/lib
 vwsd/text2image_latent_diffusion.py
 vwsd/text2image_glide.py
 vwsd/utils.py
+semeval-2023-task-1-V-WSD-trial-v1.tar.gz
+dataset/semeval-2023-task-1-V-WSD-trial-v1
