--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+vwsd_competition_bundle
 cache
 dataset
 dataset.zip
@@ -7,3 +8,4 @@ vwsd/text2image_glide.py
 vwsd/utils.py
 semeval-2023-task-1-V-WSD-trial-v1.tar.gz
 dataset/semeval-2023-task-1-V-WSD-trial-v1
+vwsd_bundle*
